--- a/package.json
+++ b/package.json
@@ -53,5 +53,11 @@
   },
   "engines": {
     "node": ">=18.18.0"
+  },
+  "dependencies": {
+    "autoprefixer": "^10.4.20",
+    "ethers": "^6.13.4",
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.17"
   }
 }
